--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 20px;
     gap: 20px;
 }
@@ -25,4 +26,24 @@ body {
     min-height: 100px;
     background-color: rgb(159, 218, 218);
     padding: 20px;
+}
+
+.box-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: content-box;
+    border: 40px solid rgb(202, 88, 88);
+    height: 100px;
+    width: 300px;
+}
+
+.box-border {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border: 40px solid rgb(202, 88, 88);
+    height: 100px;
+    width: 300px;
 }
